--- a/src/stylesheets/components/global/taskBoard/taskBoard.scss
+++ b/src/stylesheets/components/global/taskBoard/taskBoard.scss
@@ -1,5 +1,12 @@
 .task-board-column {
     position: relative;
+    margin: 8px;
     width: 300px;
     height: 500px;
+}
+
+.task-board-container {
+    display: flex;
+    height: 500px;
+    // TODO Add min height
 }
